--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,8 +8,8 @@ framework:
     # Remove or comment this section to explicitly disable session support.
     session:
         handler_id: null
-        cookie_secure: auto
-        cookie_samesite: lax
+        cookie_secure: 'auto'
+        cookie_samesite: 'lax'
 
     #esi: true
     #fragments: true
