--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,21 @@
 version: '3.4'
 
 services:
+###> doctrine/doctrine-bundle ###
   database:
-    image: mysql:5.6
-    volumes:
-      - db-data:/var/lib/mysql:rw
+    image: 'postgres:${POSTGRES_VERSION:-13}-alpine'
     environment:
-      - MYSQL_DATABASE=shopping-list
-      - MYSQL_ROOT_PASSWORD=password
-    ports:
-      - target: 3306
-        protocol: tcp
+      POSTGRES_DB: '${POSTGRES_DB:-db_name}'
+      # You should definitely change the password in production
+      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD:-db_password}'
+      POSTGRES_USER: '${POSTGRES_USER:-db_user}'
+    volumes:
+      - 'db-data:/var/lib/postgresql/data:rw'
+      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
+      # - ./docker/db/data:/var/lib/postgresql/data:rw
+###< doctrine/doctrine-bundle ###
 
 volumes:
-  db-data: {}
+###> doctrine/doctrine-bundle ###
+  db-data:
+###< doctrine/doctrine-bundle ###
