--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
@@ -15,23 +15,24 @@
         "doctrine/orm": "^2.8",
         "elao/enum": "^1.14",
         "stof/doctrine-extensions-bundle": "^1.6",
-        "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
+        "symfony/console": "^5.4",
+        "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/proxy-manager-bridge": "5.2.*",
-        "symfony/string": "5.2.*",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/proxy-manager-bridge": "^5.4",
+        "symfony/string": "^5.4",
         "symfony/webpack-encore-bundle": "^1.11",
-        "symfony/yaml": "5.2.*"
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
-        "symfony/debug-bundle": "^5.2",
+        "roave/security-advisories": "dev-latest",
+        "symfony/debug-bundle": "^5.4",
         "symfony/maker-bundle": "^1.30",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/stopwatch": "^5.2",
-        "symfony/twig-bundle": "^5.2",
-        "symfony/var-dumper": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2"
+        "symfony/stopwatch": "^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/var-dumper": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "config": {
         "optimize-autoloader": true,
@@ -73,7 +74,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.2.*"
+            "require": "^5.4"
         }
     }
 }
