--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -1,10 +1,10 @@
 monolog:
     handlers:
         main:
-            type: stream
-            path: php://stderr
-            level: debug
-            channels: ["!event"]
+            type: 'stream'
+            path: 'php://stderr'
+            level: 'debug'
+            channels: ['!event']
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
@@ -14,6 +14,6 @@ monolog:
         #    type: chromephp
         #    level: info
         console:
-            type: console
+            type: 'console'
             process_psr_3_messages: false
-            channels: ["!event", "!doctrine", "!console"]
+            channels: ['!event', '!doctrine', '!console']
