--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,12 +8,12 @@ doctrine:
         #server_version: '13'
     orm:
         auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        naming_strategy: 'doctrine.orm.naming_strategy.underscore_number_aware'
         auto_mapping: true
         mappings:
             App:
                 is_bundle: false
-                type: annotation
+                type: 'annotation'
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
-                alias: App
+                alias: 'App'
