--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -2,19 +2,19 @@ doctrine:
     orm:
         auto_generate_proxy_classes: false
         metadata_cache_driver:
-            type: pool
-            pool: doctrine.system_cache_pool
+            type: 'pool'
+            pool: 'doctrine.system_cache_pool'
         query_cache_driver:
-            type: pool
-            pool: doctrine.system_cache_pool
+            type: 'pool'
+            pool: 'doctrine.system_cache_pool'
         result_cache_driver:
-            type: pool
-            pool: doctrine.result_cache_pool
+            type: 'pool'
+            pool: 'doctrine.result_cache_pool'
 
 framework:
     cache:
         pools:
             doctrine.result_cache_pool:
-                adapter: cache.app
+                adapter: 'cache.app'
             doctrine.system_cache_pool:
-                adapter: cache.system
+                adapter: 'cache.system'
